🛠 Fix post image grid overflowing

--- a/frontend/src/styles/components/grid.css
+++ b/frontend/src/styles/components/grid.css
@@ -8,21 +8,22 @@
     }
 }
 
-.grid {
+.custom-grid {
     display: grid;
     width: 100%;
     height: 100%;
     grid-gap: 2px;
+    overflow:hidden;
 }
 
-.grid-cols-2 {
+.custom-grid-cols-2 {
     grid-template-columns: repeat(2, 1fr);
 }
-.grid-cols-3 {
+.custom-grid-cols-3 {
     grid-template-columns: repeat(3, 1fr);
 }
 
-.grid-rows-2 {
+.custom-grid-rows-2 {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 50%);
 }
